Update: Include Microchain SDK in v0.3.0 scope

--- a/V0.3.0_ROADMAP.md
+++ b/V0.3.0_ROADMAP.md
@@ -301,19 +301,24 @@ ouroboros-sdk/
 **Deliverable**: Users can link nodes to wallets for rewards
 
 ### **Phase 2: Automation** (Week 3)
-✅ **Should Have**:
+✅ **Must Have**:
 3. Automatic Updates (12h)
 
 **Deliverable**: Nodes auto-update without user intervention
 
-### **Phase 3: Ecosystem** (Week 4-6)
-🔄 **Choose One** (or split across versions):
-- Option A: **Wallet MVP** (30h) → v0.3.0
-- Option B: **Microchain SDK** (40h) → v0.4.0
+### **Phase 3: Wallet** (Week 4-5)
+✅ **Must Have**:
+4. Wallet MVP - CLI + Desktop (30h)
 
-**Recommendation**:
-- **v0.3.0**: Node features + Wallet MVP
-- **v0.4.0**: Microchain SDK (needs more mature mainchain)
+**Deliverable**: Users can manage OURO tokens and link to nodes
+
+### **Phase 4: Developer Tools** (Week 6-8)
+✅ **Must Have**:
+5. Microchain SDK - Rust/JS/Python (40h)
+
+**Deliverable**: Developers can build apps on Ouroboros microchains
+
+**Total Timeline**: 8 weeks (~98 hours total development)
 
 ---
 
@@ -333,21 +338,23 @@ ouroboros-sdk/
 
 ## 🚀 Release Plan
 
-**v0.3.0 Target Date**: January 15, 2026 (4-6 weeks)
+**v0.3.0 Target Date**: February 1, 2026 (8 weeks)
 
 **Included**:
-- ✅ Node Identity & Number
-- ✅ Wallet Linking
-- ✅ Automatic Updates
-- ✅ Wallet MVP (CLI + Desktop)
+- ✅ Node Identity & Number (6h)
+- ✅ Wallet Linking (10h)
+- ✅ Automatic Updates (12h)
+- ✅ Wallet MVP - CLI + Desktop (30h)
+- ✅ Microchain SDK - Rust/JS/Python (40h)
 - ✅ Peer connection fix (already done)
 
-**Total Estimated Effort**: ~58 hours (~1.5 weeks full-time)
+**Total Estimated Effort**: ~98 hours (~2.5 weeks full-time or 8 weeks part-time)
 
-**v0.4.0 Preview** (February 2026):
-- Microchain SDK
+**v0.4.0 Preview** (March 2026):
 - Advanced wallet features (staking, governance)
 - Transaction relay for lightweight nodes
+- Microchain marketplace/registry
+- Enhanced SDK features (templates, debugging tools)
 
 ---
 
